Fixed spell alignment issue, Removed duplicate spell image files

--- a/courier-email-client/src/App.css
+++ b/courier-email-client/src/App.css
@@ -56,6 +56,7 @@
 
 .spell span {
   margin-top: 10px;
+  width: 128px;
 }
 
 .spell-wrapper {
